--- a/com.tank.aaa/pom.xml
+++ b/com.tank.aaa/pom.xml
@@ -68,20 +68,26 @@
       </plugin>
       
       
-       <plugin>  
-                <groupId>org.apache.maven.plugins</groupId>  
-                <artifactId>maven-jar-plugin</artifactId>  
-                <version>2.4</version>  
-                <configuration>  
-                    <archive>
-                        <manifest>  
-                            <addClasspath>true</addClasspath>  
-                            <classpathPrefix>lib/</classpathPrefix>  
-                            <mainClass>MyPcap4jModule.com.tank.aaa.App</mainClass>  
-                        </manifest>  
-                    </archive>
-                </configuration>  
-            </plugin>  
+      <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-shade-plugin</artifactId>
+    <version>3.1.0</version>
+    <executions>
+        <execution>
+            <phase>package</phase>
+            <goals>
+                <goal>shade</goal>
+            </goals>
+            <configuration>
+                <transformers>
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <mainClass>MyPcap4jModule.com.tank.aaa.CoreMainApp</mainClass>
+                    </transformer>
+                </transformers>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
     </plugins>
 
   </build>
